--- a/Increase_Accuracy_MNIST.ipynb
+++ b/Increase_Accuracy_MNIST.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "selected-montana",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jaym9000/Desktop/Programming/unb-projects/neural-network/Increase_Accuracy_MNIST.ipynb Cell 1'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jaym9000/Desktop/Programming/unb-projects/neural-network/Increase_Accuracy_MNIST.ipynb#ch0000000?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jaym9000/Desktop/Programming/unb-projects/neural-network/Increase_Accuracy_MNIST.ipynb#ch0000000?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jaym9000/Desktop/Programming/unb-projects/neural-network/Increase_Accuracy_MNIST.ipynb#ch0000000?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m \u001b[39mimport\u001b[39;00m pyplot \u001b[39mas\u001b[39;00m plt\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -17,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "scheduled-lecture",
    "metadata": {},
    "outputs": [],
@@ -40,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "floral-original",
    "metadata": {},
    "outputs": [
@@ -61,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "demanding-divide",
    "metadata": {},
    "outputs": [],
@@ -117,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "demographic-nancy",
    "metadata": {},
    "outputs": [],
@@ -144,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "spatial-dylan",
    "metadata": {},
    "outputs": [
@@ -311,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "angry-keeping",
    "metadata": {},
    "outputs": [],
@@ -336,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "emotional-apparel",
    "metadata": {
     "scrolled": true
@@ -558,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "expired-cycling",
    "metadata": {},
    "outputs": [],
@@ -585,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "material-positive",
    "metadata": {
     "scrolled": true
@@ -904,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "agricultural-given",
    "metadata": {
     "scrolled": false
@@ -1223,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "uniform-mitchell",
    "metadata": {},
    "outputs": [],
@@ -1248,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "fifth-hobby",
    "metadata": {
     "scrolled": true
@@ -1478,6 +1490,9 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "082e9a3bcad0a290d0001e938aa60b99250c6c2ef33a923c00b70f9826caf4b7"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1493,7 +1508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
